--- a/Unity Project 1/Packages/manifest.json
+++ b/Unity Project 1/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.inputsystem": "1.7.0",
